# cantonese-word-game

./: .dockerignore  .gitignore  ASR_FIX.md  BACKEND.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.sh  Dockerfile  FRONTEND.md  IMPLEMENTATION.md  INTEGRATION_TEST.md  PRODUCTION_ACCESS.md  QUICK_START.md  README.md  README_FRONTEND.md  RUN_SERVICE.md  Requirements.md  SETUP.md  START_SERVERS.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  URGENT_DISK_SPACE.md  all-changes.diff  create_admin.py  create_admin_lambda.py  create_admin_simple.py  deployment-outputs.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  setup_demo.py  start-backend.sh  start-services.sh  test_integration.sh  vite.config.ts  vitest.config.ts
backend/: .dockerignore  .gitignore  ASR_IMPLEMENTATION.md  ASR_INSTALLED.md  ASR_STATUS.md  DATABASE_MIGRATION.md  Dockerfile  IMPLEMENTATION.md  INSTALL_ASR.md  README.md  SPEECH_RECOGNITION.md  alembic.ini  init_db.py  pyproject.toml  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_admin_and_demo_deck.py  2f3b65c6a7c6_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: __init__.py  base.py  database_service.py  (+2 more)
backend/openapi/: openapi.yaml
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_decks.py  test_games.py  test_integration.py  test_statistics.py
backend/tests_integration/: conftest.py  test_database_models.py  test_database_operations.py
(+54 files in other folders)
